--- a/demo/Jenkinsfile
+++ b/demo/Jenkinsfile
@@ -1,3 +1,8 @@
+--> feb 15th 2024
+--> processed is not 0
+
+
+
 pipeline {
 	agent any
 	tools {
@@ -21,7 +26,10 @@ pipeline {
         	}
     	}
    	 
-    	
+    	stage("Unit test") {          	 
+        	steps {  	 
+            	sh "mvn test"          	 
+       	}
 }
 }
-
+}
